--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ionic-project",
   "version": "1.1.1",
   "description": "An Ionic project",
+  "scripts": {
+    "lint": "jshint www; jscs www"
+  },
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
@@ -12,6 +15,9 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "jscs": "^2.11.0",
+    "jshint": "^2.9.1",
+    "pre-commit": "^1.1.2",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
@@ -22,5 +28,9 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "pre-commit": [
+    "lint"
+  ]
+
 }
