--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "description": "An Ionic project",
   "scripts": {
-    "lint": "jshint www; jscs www"
+    "lint": "jshint www && jscs www"
   },
   "dependencies": {
     "gulp": "^3.5.6",
