--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,28 @@ www/lib
 
 # Optional REPL history
 .node_repl_history
+.DS_Store
+node_modules
+*.sw[mnpcod]
+*.log
+*.tmp
+*.tmp.*
+log.txt
+example/cordova/iOS/www/js/framework
 
-#ionic specific
-plugins
-platforms
+example/cordova/iOS/www/js/framework
+.sass-cache/
+
+bower_components/
+components/
+tmp
+temp
+dist
+lib/
+
+.idea
+
+.versions
+
+# Coverage directory used by tools like istanbul
+coverage/
