--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4"
+  },
+  "dependencies": {
+    "angular-socket-io": "^0.7.0",
+    "socket.io-client": "^1.4.5"
   }
 }
