--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "lint": "jshint www && jscs www"
   },
   "dependencies": {
+    "angular-socket-io": "^0.7.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "socket.io-client": "^1.4.5"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -32,5 +34,4 @@
   "pre-commit": [
     "lint"
   ]
-
 }
