--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "angular-socket-io": "^0.7.0",
-    "socket.io-client": "^1.4.5"
+    "socket.io-client": "^1.4.5",
+    "angular-mocks": "1.4.3"
   }
 }
