--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
     "socket.io-client": "^1.4.5"
   },
   "devDependencies": {
@@ -19,6 +21,10 @@
     "gulp-util": "^2.2.14",
     "jscs": "^2.11.0",
     "jshint": "^2.9.1",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.6",
     "pre-commit": "^1.1.2",
     "shelljs": "^0.3.0"
   },
