--- a/package.json
+++ b/package.json
@@ -18,15 +18,22 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "chai": "^3.5.0",
     "gulp-util": "^2.2.14",
     "jscs": "^2.11.0",
     "jshint": "^2.9.1",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
     "karma-jasmine": "^0.3.8",
+    "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.4.5",
     "phantomjs": "^2.1.3",
     "phantomjs-prebuilt": "^2.1.6",
     "pre-commit": "^1.1.2",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "sinon": "^1.17.3"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
