--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "ionic-plugin-keyboard": "^2.0.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "socket.io-client": "^1.4.5"
