--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "socket.io-client": "^1.4.5",
     "angular-messages": "^1.5.2",
     "angular-mocks": "1.4.3",
-    "openfb": "^0.5.0"
+    "openfb": "^0.5.0",
+    "ngCordova": "^0.1.24-alpha"
   },
   "resolutions": {
     "angular": "1.4.x"
