--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.1.1",
   "description": "An Ionic project",
   "scripts": {
-    "lint": "jshint www && jscs www"
+    "lint": "jshint www && jscs www",
+    "test": "karma start tests/unit-tests.conf.js"
   },
   "dependencies": {
     "angular-socket-io": "^0.7.0",
